--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <script src="./scripts/main.js" type="module"></script>
+    <article class="potteryList" id="potteryList"></article>
 </body>
 </html>
